installed a bunch of deps and pugins running correctly

--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -24,6 +24,12 @@ buildscript {
 apply plugin: "com.facebook.react.rootproject"
 
 allprojects {
+        configurations.configureEach {
+            resolutionStrategy.dependencySubstitution {
+                substitute(platform(module('com.gemalto.jp2:jp2-android'))) using module('com.github.Tgo1014:JP2ForAndroid:1.0.4')
+            }
+            resolutionStrategy.force 'com.google.guava:guava:31.1-android'
+        }
     repositories {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
