--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -54,3 +54,6 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+android.enableJetifier=true
+android.packagingOptions.excludes=META-INF/LICENSE,META-INF/NOTICE,META-INF/versions/9/OSGI-INF/MANIFEST.MF
