--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,3 +41,62 @@ android {
     abortOnError false
   }
 }
+
+
+dependencies {
+    implementation 'com.google.code.gson:gson:2.8.9'  // Check for the latest version
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'com.wdullaer:materialdatetimepicker:3.5.2'
+    implementation 'org.jmrtd:jmrtd:0.7.42' // getting different errors whether it's 18 or 40 // 23 <== this works
+    // implementation files('../../../../../jmrtd-0.7.18-sources/target/jmrtd-0.7.18.jar')
+    // implementation files('../../app/libs/jmrtd-0.7.18.jar')
+    // implementation 'com.madgag.spongycastle:prov:1.54.0.0'
+    implementation 'com.gemalto.jp2:jp2-android:1.0.3'
+    implementation 'com.github.mhshams:jnbis:1.1.0'
+    // implementation 'org.bouncycastle:bcpkix-jdk15on:1.65' // do not update
+    implementation 'commons-io:commons-io:2.8.0'
+
+        //NFC Passport
+    implementation 'org.jmrtd:jmrtd:0.7.35'
+    implementation 'com.madgag.spongycastle:prov:1.58.0.0'
+    implementation 'net.sf.scuba:scuba-sc-android:0.0.23'
+    implementation ('org.ejbca.cvc:cert-cvc:1.4.13'){
+        exclude group: 'org.bouncycastle', module: 'bcprov-jdk15on'
+    }
+
+    //WSQ
+    implementation 'com.github.mhshams:jnbis:2.0.2'
+
+    //Input data Validator
+    implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
+
+    //DatatypeConverter
+    implementation 'commons-codec:commons-codec:1.13'
+
+    //Camera
+    implementation 'io.fotoapparat:fotoapparat:2.7.0'
+
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    //RX
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+
+    //Annotations
+    implementation "org.androidannotations:androidannotations-api:4.4.0"
+
+    //OpenLDAP
+    //implementation 'com.unboundid:unboundid-ldapsdk:5.0.1@jar'
+
+    //OKHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.0"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+}
