--- a/example/app.json
+++ b/example/app.json
@@ -26,6 +26,6 @@
 		"web": {
 			"favicon": "./assets/favicon.png"
 		},
-		"plugins": [["../app.plugin.js", { "apiKey": "custom_secret_api" }]]
+		"plugins": ["../app.plugin.js"]
 	}
 }
