--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "letro-passport",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"description": "utilities for interacting with passport and nfc",
 	"main": "build/index.js",
 	"types": "build/index.d.ts",
@@ -15,12 +15,7 @@
 		"open:ios": "xed example/ios",
 		"open:android": "open -a \"Android Studio\" example/android"
 	},
-	"keywords": [
-		"react-native",
-		"expo",
-		"letro-passport",
-		"LetroPassport"
-	],
+	"keywords": ["react-native", "expo", "letro-passport", "LetroPassport"],
 	"repository": "https://github.com/ehsunahmadi/letro-passport",
 	"bugs": {
 		"url": "https://github.com/ehsunahmadi/letro-passport/issues"
